apps/base/ntfy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    homelab.io/app: "true"
